--- a/Changes
+++ b/Changes
@@ -1,13 +1,13 @@
-Revision history for Perl extension WWW::Scraper::ISBN::ISBNnu_Driver.
+Revision history for WWW::Scraper::ISBN::ISBNnu_Driver
+======================================================
 
         - New Maintainer: Barbie.
         - move module into lib directory structure.
+        - change file dates changed to meet W3CDTF standards.
 
-0.17 - 04/06/2004 - A. Schamp
-	Removed Exporter and perl versioning stuff
-	by user request
+0.17    2004-04-06
+	    - Removed Exporter and perl versioning stuff by user request
 
-0.16 - 3/30/2004
-	Started using Changes file ;)
-	Cleaned up documentation a bit.
-
+0.16    2004-03-30
+	    - Started using Changes file ;)
+	    - Cleaned up documentation a bit.
