--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for WWW::Scraper::ISBN::ISBNnu_Driver
         - New Maintainer: Barbie.
         - move module into lib directory structure.
         - change file dates changed to meet W3CDTF standards.
+        - reworked Makefile.PL for clarity.
 
 0.17    2004-04-06
 	    - Removed Exporter and perl versioning stuff by user request
