--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ Revision history for WWW::Scraper::ISBN::ISBNnu_Driver
         - change file dates changed to meet W3CDTF standards.
         - reworked Makefile.PL for clarity.
         - added META.json and updated META.yml.
+        - extended test suite.
+        - documentation updates.
 
 0.17    2004-04-06
 	    - Removed Exporter and perl versioning stuff by user request
