--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for WWW::Scraper::ISBN::ISBNnu_Driver
 ======================================================
 
+        - updated pre-requisites.
+
 0.19    2013-08-25
         - New Maintainer: Barbie.
         - move module into lib directory structure.
