--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for WWW::Scraper::ISBN::ISBNnu_Driver
 ======================================================
 
+        - added standalone LICENSE file.
+
 0.20    2013-08-28
         - updated pre-requisites.
 
