--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for WWW-Scraper-ISBN-ISBNnu_Driver
 ===================================================
 
         - fixed distribution name in META.
+        - upgrade to WWW-Scraper-ISBN-1.00.
 
 0.21    2014-03-27
         - added standalone LICENSE file.
