--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for WWW-Scraper-ISBN-ISBNnu_Driver
         - fixed distribution name in META.
         - upgrade to WWW-Scraper-ISBN-1.00.
         - removed obsolete documentation.
+        - extended test suite.
 
 0.21    2014-03-27
         - added standalone LICENSE file.
