updated list of documentated return fields

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for WWW-Scraper-ISBN-ISBNnu_Driver
         - upgrade to WWW-Scraper-ISBN-1.00.
         - removed obsolete documentation.
         - extended test suite.
+        - updated list of documentated return fields.
 
 0.21    2014-03-27
         - added standalone LICENSE file.
