--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for WWW-Scraper-ISBN-ISBNnu_Driver
 ===================================================
 
+        - reworked test failure checks.
+
 0.22    2014-07-21
         - fixed distribution name in META.
         - upgrade to WWW-Scraper-ISBN-1.00.
