--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for WWW-Scraper-ISBN-ISBNnu_Driver
 ===================================================
 
         - fixed license fields in META.json to be lists.
+        - ping fix for Cygwin (thanks to Alexandr Ciornii).
 
 0.23    2014-08-07
         - reworked test failure checks.
